# SmartCachePP

./: CMakeLists.txt  README.md
examples/: main.cpp
include/: CacheEntry.h  DiskPersistence.h  EvictionPolicy.h  LRU.h  Logger.h  Metrics.h  SmartCache.h  ThreadPool.h
src/: DiskPersistence.cpp  LRU.cpp  Metrics.cpp  SmartCache.cpp  ThreadPool.cpp
tests/: test_cache.cpp
